--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,10 @@
 <p>Email: HAN XIANG HANDSOME@ gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  25350 Lot 65 Kaw. <br />
+  Perindustrian Semambu <br />
+  Kuantan Pahang <br />
 </p>
+
+<a href="https://www.google.com/maps/dir//25350+Lot+65+Kaw.+Perindustrian+Semambu+Kuantan+Pahang/@3.8479653,103.2460962,11.88z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31c8a2ad4e6f803d:0xcc63d915ca5bd432!2m2!1d103.3313684!2d3.8471927?entry=ttu">click here to google map</a>
+  
