--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h1> Han Xiang's First Portfolio ever</h1>
         <h2>this is me, a very handsome boy</h2>
         <img src="./assets/images/whx.png.JPG" height="100">
-        <h3>i am still learning , but it is the time to flex my skill !!!</h3>
+        <h3>i am handsome</h3>
         <hr />
         <h4><a href="./public/birthday-invite.html">This is my birthday invite project</a></h4>
         <img src="./assets/images/birthday-invite.png" height="200" />
