--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,3 @@
 <h1>About Me</h1>
-<p> Hi there ! how are you . let's begin my self introduction. my name is Wong Han Xiang and i live at a city called Kuantan, it is such a beautiful city it have a long river which is called kuantan river.
-  i live in here since i was born in earth , and I am planning to go to Kuala Lumpur to go further studies, I had just finish my SPM exam and there are many free time for me when I am waiting my SPM result 
-  so i decided to learn some new skill which is web development and i am planning to take cybersecurity as my major in monash university , so i hope this skill will help me in the futuer</p>
-
+<p> hello </p>>
   <P> that all from me now , thank you !</P>
